remove annotation processor config from java 18

--- a/sdk/clientcore/annotation-processor/pom.xml
+++ b/sdk/clientcore/annotation-processor/pom.xml
@@ -56,6 +56,12 @@
     <tag>HEAD</tag>
   </scm>
 
+  <properties>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
+    <packageOutputDirectory>${project.build.directory}</packageOutputDirectory>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.squareup</groupId>
@@ -103,15 +109,5 @@
         <filtering>true</filtering>
       </resource>
     </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>17</source>
-          <target>17</target>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
