Add necessary condition
Missed adding this originally. If the tests fail this still has to run, just like publish.

--- a/eng/pipelines/templates/steps/build-and-test.yml
+++ b/eng/pipelines/templates/steps/build-and-test.yml
@@ -267,6 +267,7 @@ steps:
           $xml.Save($_.FullName)
       }
     displayName: 'Update test case names for reporting'
+    condition: always()
     workingDirectory: $(System.DefaultWorkingDirectory)/sdk
 
   - task: PublishTestResults@2
