--- a/sdk/clientcore/optional-dependency-tests/pom.xml
+++ b/sdk/clientcore/optional-dependency-tests/pom.xml
@@ -109,6 +109,12 @@
       <version>1.37</version> <!-- {x-version-update;org.openjdk.jmh:jmh-generator-annprocess;external_dependency} -->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.22.0</version>  <!-- {x-version-update;org.assertj:assertj-core;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
