--- a/sdk/parents/clientcore-parent/pom.xml
+++ b/sdk/parents/clientcore-parent/pom.xml
@@ -731,7 +731,7 @@
             </compilerArgs>
 
             <!-- Default is annotation processing being off. -->
-            <proc>${compiler.proc}</proc>
+            <!-- <proc>${compiler.proc}</proc> -->
 
             <createMissingPackageInfoClass>false</createMissingPackageInfoClass>
           </configuration>
