Port OpenRewrite to Main (#43884)
* Port Azure OpenRewrite into java repo

* updates to port PR

* updates to port PR: package name fixes

* fix azure-tools-service pom

* Updates based on Srikanta's comments

* Updates based on Srikanta's comments

* Additional updates to PR

* Updating PR README.md

* Removing author names. Making azure-core a test dependency.

* Adjusting CI

* Adjusting README.MD to fix CI failures

* Adjusting MIGRATION.md

* Adjusting PR based on comments

* Fixing CI failure

* Adjusting for alphabetical order.

* Changing rewrite dependency to reflect java baseline.

* Changing dependency scope to test

--- a/sdk/tools/ci.yml
+++ b/sdk/tools/ci.yml
@@ -6,10 +6,12 @@ trigger:
     include:
       - /sdk/tools/azure-sdk-archetype/
       - /sdk/tools/azure-sdk-build-tool/
+      - /sdk/tools/azure-openrewrite/
     exclude:
       - sdk/tools/pom.xml
       - sdk/tools/azure-sdk-build-tool/pom.xml
       - sdk/tools/azure-sdk-archetype/pom.xml
+      - /sdk/tools/azure-openrewrite/pom.xml
 
 pr:
   branches:
@@ -22,10 +24,12 @@ pr:
     include:
       - /sdk/tools/azure-sdk-archetype/
       - /sdk/tools/azure-sdk-build-tool/
+      - /sdk/tools/azure-openrewrite/
     exclude:
       - sdk/tools/pom.xml
       - sdk/tools/azure-sdk-build-tool/pom.xml
       - sdk/tools/azure-sdk-archetype/pom.xml
+      - /sdk/tools/azure-openrewrite/pom.xml
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
