--- a/sdk/tools/pom.xml
+++ b/sdk/tools/pom.xml
@@ -11,5 +11,6 @@
   <modules>
     <module>azure-sdk-archetype</module>
     <module>azure-sdk-build-tool</module>
+    <module>azure-openrewrite</module>
   </modules>
 </project>
