--- a/sdk/serialization/azure-json-reflect/pom.xml
+++ b/sdk/serialization/azure-json-reflect/pom.xml
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-json</artifactId>
-      <version>1.4.0</version> <!-- {x-version-update;com.azure:azure-json;current} -->
+      <version>1.5.0-beta.1</version> <!-- {x-version-update;com.azure:azure-json;current} -->
     </dependency>
 
     <!-- Test Dependencies -->
@@ -84,7 +84,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-json</artifactId>
-      <version>1.4.0</version> <!-- {x-version-update;com.azure:azure-json;current} -->
+      <version>1.5.0-beta.1</version> <!-- {x-version-update;com.azure:azure-json;current} -->
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
