--- a/sdk/boms/azure-sdk-bom/pom.xml
+++ b/sdk/boms/azure-sdk-bom/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.azure</groupId>
   <artifactId>azure-sdk-bom</artifactId>
-  <version>1.2.30</version>
+  <version>1.2.31</version>
   <packaging>pom</packaging>
   <name>Azure Java SDK BOM (Bill of Materials)</name>
   <description>Azure Java SDK BOM (Bill of Materials)</description>
@@ -44,6 +44,11 @@
         <groupId>com.azure</groupId>
         <artifactId>azure-ai-formrecognizer</artifactId>
         <version>4.1.12</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-ai-documentintelligence</artifactId>
+        <version>1.0.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -158,12 +163,12 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-cosmos</artifactId>
-        <version>4.65.0</version>
+        <version>4.66.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-cosmos-encryption</artifactId>
-        <version>2.16.0</version>
+        <version>2.17.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -198,7 +203,7 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-developer-loadtesting</artifactId>
-        <version>1.0.19</version>
+        <version>1.0.20</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -213,17 +218,17 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-identity</artifactId>
-        <version>1.14.2</version>
+        <version>1.15.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-identity-broker</artifactId>
-        <version>1.1.8</version>
+        <version>1.1.9</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-identity-extensions</artifactId>
-        <version>1.1.22</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -238,7 +243,7 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-messaging-eventgrid</artifactId>
-        <version>4.27.0</version>
+        <version>4.28.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -248,7 +253,7 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-messaging-eventhubs</artifactId>
-        <version>5.19.2</version>
+        <version>5.20.0</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -258,7 +263,7 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-messaging-servicebus</artifactId>
-        <version>7.17.7</version>
+        <version>7.17.8</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -308,12 +313,12 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-security-keyvault-administration</artifactId>
-        <version>4.6.1</version>
+        <version>4.6.2</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-security-keyvault-certificates</artifactId>
-        <version>4.7.1</version>
+        <version>4.7.2</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
@@ -323,12 +328,12 @@
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-security-keyvault-keys</artifactId>
-        <version>4.9.1</version>
+        <version>4.9.2</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-security-keyvault-secrets</artifactId>
-        <version>4.9.1</version>
+        <version>4.9.2</version>
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
