--- a/sdk/clientcore/http-stress/pom.xml
+++ b/sdk/clientcore/http-stress/pom.xml
@@ -80,7 +80,7 @@
             <bannedDependencies>
               <includes>
                 <include>com.azure:perf-test-core:[1.0.0-beta.1]</include> <!-- {x-include-update;com.azure:perf-test-core;dependency} -->
-                <include>azure-monitor-opentelemetry-autoconfigure:[1.0.0-beta.1]</include> <!-- {x-include-update;com.azure:azure-monitor-opentelemetry-autoconfigure;dependency} -->
+                <include>com.azure:azure-monitor-opentelemetry-autoconfigure:[1.0.0-beta.1]</include> <!-- {x-include-update;com.azure:azure-monitor-opentelemetry-autoconfigure;dependency} -->
                 <include>io.opentelemetry.instrumentation:opentelemetry-runtime-telemetry-java8:[2.9.0-alpha]</include> <!-- {x-include-update;io.opentelemetry.instrumentation:opentelemetry-runtime-telemetry-java8;external_dependency} -->
                 <include>io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:[2.9.0-alpha]</include> <!-- {x-include-update;io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0;external_dependency} -->
                 <include>ch.qos.logback:logback-classic:[1.3.14]</include> <!-- {x-include-update;ch.qos.logback:logback-classic;external_dependency} -->
