--- a/sdk/clientcore/annotation-processor/pom.xml
+++ b/sdk/clientcore/annotation-processor/pom.xml
@@ -98,6 +98,7 @@
     <site.url>https://azuresdkartifacts.blob.core.windows.net/azure-sdk-for-java</site.url>
     <checkstyle.suppressionsLocation>checkstyle-suppressions.xml</checkstyle.suppressionsLocation>
     <spotbugs.excludeFilterFile>spotbugs-exclude.xml</spotbugs.excludeFilterFile>
+    <revapi.skip>true</revapi.skip>
   </properties>
 
   <dependencies>
