Add annotation-processor to clientcore ci.yml (#43886)

--- a/sdk/clientcore/pom.xml
+++ b/sdk/clientcore/pom.xml
@@ -14,6 +14,7 @@
     <module>http-okhttp3</module>
     <module>optional-dependency-tests</module>
     <module>http-stress</module>
-    <module>tools</module>
+    <module>annotation-processor</module>
+    <module>annotation-processor-test</module>
   </modules>
 </project>
