--- a/sdk/tools/azure-openrewrite/src/main/resources/META-INF/rewrite/rewrite.yml
+++ b/sdk/tools/azure-openrewrite/src/main/resources/META-INF/rewrite/rewrite.yml
@@ -1,66 +1,13 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License.
+# --------------------------------------------------------------------
+# Azure-SDK-For-Java Library Migration Recipes
+# --------------------------------------------------------------------
+#
 type: specs.openrewrite.org/v1beta/recipe
-name: com.azure.openrewrite.migrateToVNext
-displayName: Migrate from azure-core to azure-core-v2
-description: This recipe migrates the azure sdk libraries from azure-core to azure-core-v2 and clientcore libraries.
+name: com.azure.openrewrite.migrateToVNext # name to be changed
+displayName: Migrate Azure SDKs to Next-Generation Library Stack
+description: This recipe migrates the Azure SDKs to the next-generation library stack.
 recipeList:
-  # SDK-specific recipes
   - com.azure.openrewrite.recipes.migrateAzureCore
   - com.azure.openrewrite.recipes.migrateAzureStorageBlob
-
-  # - com.azure.openrewrite.recipes.migrateAzureStorageLibraries
-  #- com.azure.openrewrite.recipes.migrateAzureAILibraries
-
-  # run this recipe after migration recipes
-  #- com.azure.openrewrite.recipes.defaultRecipes
-
-  # Ignore module-info.java for now until OpenRewrite implements support for it
-  # Recipe to migrate com.azure.core requirements in module-info.java to com.azure.core.v2
-  #- org.openrewrite.text.FindAndReplace:
-  #    regex: true
-  #    find: 'requires\s+(transitive\s+)?com\.azure\.core(?!\.v2)'
-  #    replace: 'requires $1com.azure.core.v2'
-  #    filePattern: '**/module-info.java'
-
----
-type: specs.openrewrite.org/v1beta/recipe
-name: com.azure.openrewrite.recipes.migrateAzureAILibraries
-displayName: Migrate azure translation libraries to next-gen libraries
-description: This recipe migrates the azure translation libraries to the next-gen libraries.
-recipeList:
-  # Rename methods
-  # Alternatively, can target HttpTrait directly
-
-  # Before: textTranslationClient.retryOptions(new RetryOptions())
-  # After: textTranslationClient.httpRetryOptions(new RetryOptions())
-  - org.openrewrite.java.ChangeMethodName:
-      methodPattern: com.azure.ai.translation.text.TextTranslationClientBuilder retryOptions(..)
-      newMethodName: httpRetryOptions
-      matchOverrides: true
-
-  # Before:
-  # textTranslationClient.pipeline(pipeline)
-  # After:
-  # textTranslationClient.httpPipeline(pipeline)
-  - org.openrewrite.java.ChangeMethodName:
-      methodPattern: com.azure.ai.translation.text.TextTranslationClientBuilder pipeline(..)
-      newMethodName: httpPipeline
-      matchOverrides: true
-
-  # Before:
-  # textTranslationClient.addPolicy(customPolicy)
-  # After:
-  # textTranslationClient.addHttpPipelinePolicy(customPolicy)
-  - org.openrewrite.java.ChangeMethodName:
-      methodPattern: com.azure.ai.translation.text.TextTranslationClientBuilder addPolicy(..)
-      newMethodName: addHttpPipelinePolicy
-      matchOverrides: true
----
-# Default Recipes to run after migration recipes
-type: specs.openrewrite.org/v1beta/recipe
-name: com.azure.openrewrite.recipes.defaultRecipes
-displayName: Migrate to next-gen Storage libraries
-description: This recipe migrates the azure sdk storage libraries to the next-gen libraries.
-recipeList:
-  # Recipe to re-order imports to match standard conventions
-  - org.openrewrite.java.OrderImports
----
