use the existing env vars in the portal secrets

--- a/sdk/openai/tests.yml
+++ b/sdk/openai/tests.yml
@@ -12,9 +12,9 @@ extends:
         groupId: com.azure
         safeName: azureaiopenai
     EnvVars:
-      AZURE_OPENAI_ENDPOINT: $(AOAI-ENDPOINT)
-      AZURE_OPENAI_KEY: $(AOAI-API-KEY)
-      NON_AZURE_OPENAI_KEY: $(python-nonazure-openai-key)
+      AZURE_OPENAI_ENDPOINT: $(AOAI-ENDPOINT-SWEDENCENTRAL)
+      AZURE_OPENAI_KEY: $(AOAI-API-KEY-SWEDENCENTRAL)
+      NON_AZURE_OPENAI_KEY: $(OPENAI-API-KEY)
       AZURE_OPENAI_CHAT_DEPLOYMENT: $(AOAI-CHAT-COMPLETIONS-MODEL-DEPLOYMENT)
       AZURE_OPENAI_COMPLETIONS_DEPLOYMENT: $(AOAI-COMPLETIONS-MODEL-DEPLOYMENT)
       AZURE_OPENAI_NORTHCENTRALUS_ENDPOINT: $(AOAI-ENDPOINT-NORTHCENTRALUS)
