--- a/sdk/monitor/azure-monitor-opentelemetry-exporter/pom.xml
+++ b/sdk/monitor/azure-monitor-opentelemetry-exporter/pom.xml
@@ -17,13 +17,19 @@
   <version>1.0.0-beta.32</version> <!-- {x-version-update;com.azure:azure-monitor-opentelemetry-exporter;current} -->
 
   <name>Microsoft Azure SDK for OpenTelemetry Azure Monitor Exporter</name>
-  <description>This package contains Microsoft Azure SDK for OpenTelemetry Azure Monitor Exporter.</description>
+  <description>Please note, this package has been deprecated and will no longer be maintained.
+    We encourage you to upgrade to the replacement package, `azure-monitor-opentelemetry-autoconfigure`, to continue receiving updates.
+    Refer to our deprecation policy (https://aka.ms/azsdk/support-policies) for more details.</description>
 
   <distributionManagement>
     <site>
       <id>azure-java-build-docs</id>
       <url>${site.url}/site/${project.artifactId}</url>
     </site>
+    <relocation>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-monitor-opentelemetry-autoconfigure</artifactId>
+    </relocation>
   </distributionManagement>
 
   <scm>
