--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -451,6 +451,21 @@ jobs:
           - ${{ config }}
         - ${{ each config in parameters.AdditionalMatrixConfigs }}:
           - ${{ config }}
+      ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
+        EnablePRGeneration: true
+        SparseCheckoutPaths:
+          - '**/*.xml'
+          - '**/*.md'
+          - '**/ci*.yml' # necessary for save-package-properties.yml
+        PreGenerationSteps:
+          - task: UsePythonVersion@0
+            displayName: 'Use Python $(PythonVersion)'
+            inputs:
+              versionSpec: $(PythonVersion)
+          - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
+            parameters:
+              ServiceDirectory: ${{parameters.ServiceDirectory}}
+              ExcludePaths: ${{parameters.ExcludePaths}}
       MatrixFilters: ${{ parameters.MatrixFilters }}
       MatrixReplace: ${{ parameters.MatrixReplace }}
       CloudConfig:
