Add **/*matrix*.json to PR sparse checkout for test matrix generation that's not under eng

--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -457,6 +457,7 @@ jobs:
           - '**/*.xml'
           - '**/*.md'
           - '**/ci*.yml' # necessary for save-package-properties.yml
+          - "**/*matrix*.json" # necessary for test matrix generation
         PreGenerationSteps:
           - task: UsePythonVersion@0
             displayName: 'Use Python $(PythonVersion)'
